headerを作成中 プラスボタンを押すとドロップダウンメニューを開くのを実装中

--- a/src/components/organisms/header/header.html
+++ b/src/components/organisms/header/header.html
@@ -39,7 +39,7 @@
     <button class="btn btn-secondary">DOWNLOAD</button>
   </div>
   <div class="rectangle-group">
-    <label for="check">
+    <label for="check" class="rectangle-check">
       <div class="rectangle"></div>
       <div class="rectangle"></div>
       <div class="rectangle"></div>
@@ -49,7 +49,11 @@
       <li><a href="#">HOME</a></li>
       <li>
         <a href="#">CONCEPT</a>
-        <ul>
+        <label for="check" class="concept-check">
+          <div class="plus"></div>
+        </label>
+        <input type="checkbox" id="plus-mrk" />
+        <ul class="plus-dropdown-menu">
           <li><a href="#">ブログアーカイブ</a></li>
           <li><a href="#">お知らせアーカイブ</a></li>
           <li><a href="#">イベントアーカイブ</a></li>
