headerを作成中 一回リセット

--- a/src/components/organisms/header/header.html
+++ b/src/components/organisms/header/header.html
@@ -1,77 +1,58 @@
-<header class="container-change">
-  <a class="switch" href="#">
+<header class="navbar navbar-expand-sm navbar-light bg-light">
+  <a class="navbar-brand" href="#">
     <img src="../../../img/header.png" alt="" />
   </a>
-  <div
-    class="btn-group btn-group-change"
-    role="group"
-    aria-label="Basic example"
-  >
-    <button class="btn btn-secondary">HOME</button>
-    <div class="dropdown">
-      <button
-        class="btn btn-secondary"
-        type="button"
-        data-toggle="dropdown"
-        aria-haspopup="true"
-        aria-expanded="false"
-      >
-        CONCEPT
-      </button>
-      <div class="dropdown-menu">
-        <a href="" class="dropdown-item">ブログアーカイブ</a
-        ><a href="" class="dropdown-item">お知らせアーカイブ</a
-        ><a href="" class="dropdown-item">イベントアーカイブ</a>
-        <a href="" class="dropdown-item">インタビューアーカイブ</a
-        ><a href="" class="dropdown-item">FAQページ</a
-        ><a href="" class="dropdown-item">固定ページ(デフォルト)</a>
-        <a href="" class="dropdown-item">CONCEPT</a
-        ><a href="" class="dropdown-item">SERVICE</a
-        ><a href="" class="dropdown-item">FLOOR</a>
-        <a href="" class="dropdown-item">ACCESS</a>
-      </div>
-    </div>
-    <button class="btn btn-secondary">SERVICE</button>
-    <button class="btn btn-secondary">FLOOR</button>
-    <button class="btn btn-secondary">INTERVIEW</button>
-    <button class="btn btn-secondary">BLOG</button>
-    <button class="btn btn-secondary">ACCESS</button>
-    <button class="btn btn-secondary">DOWNLOAD</button>
-  </div>
-  <div class="rectangle-group">
-    <label for="check" class="rectangle-check">
-      <div class="rectangle"></div>
-      <div class="rectangle"></div>
-      <div class="rectangle"></div>
-    </label>
-    <input type="checkbox" id="check" />
-    <ul class="rectangle-dropdown-menu dropdown">
-      <li><a href="#">HOME</a></li>
-      <li>
-        <a href="#">CONCEPT</a>
-        <label for="check" class="concept-check">
-          <div class="plus"></div>
-        </label>
-        <input type="checkbox" id="plus-mrk" />
-        <ul class="plus-dropdown-menu">
-          <li><a href="#">ブログアーカイブ</a></li>
-          <li><a href="#">お知らせアーカイブ</a></li>
-          <li><a href="#">イベントアーカイブ</a></li>
-          <li><a href="#">インタビューアーアーカイブ</a></li>
-          <li><a href="#">FAQページ</a></li>
-          <li><a href="#">固定ページ(デフォルト)</a></li>
-          <li><a href="#">CONCEPT</a></li>
-          <li><a href="#">SERVICE</a></li>
-          <li><a href="#">FLOOR</a></li>
-          <li><a href="#">ACCESS</a></li>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#">HOME</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a
+          class="nav-link dropdown-toggle active"
+          href="#"
+          id="navbarDropdown"
+          role="button"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+        >
+          CONCEPT
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li><a href="#" class="dropdown-item">ブログアーカイブ</a></li>
+          <li><a href="#" class="dropdown-item">お知らせアーカイブ</a></li>
+          <li><a href="#" class="dropdown-item">イベントアーカイブ</a></li>
+          <li>
+            <a href="#" class="dropdown-item">インタビューアーアーカイブ</a>
+          </li>
+          <li><a href="#" class="dropdown-item">FAQアーカイブ</a></li>
+          <li>
+            <a href="#" class="dropdown-item">固定ページ(デフォルト)</a>
+          </li>
+          <li><a href="#" class="dropdown-item">CONCEPT</a></li>
+          <li><a href="#" class="dropdown-item">SERVICE</a></li>
+          <li><a href="#" class="dropdown-item">FLOOR</a></li>
+          <li><a href="#" class="dropdown-item">ACCESS</a></li>
         </ul>
       </li>
-      <li><a href="#">SERVICE</a></li>
-      <li><a href="#">FLOOR</a></li>
-      <li><a href="#">INTERVIEW</a></li>
-      <li><a href="#">BLOG</a></li>
-      <li><a href="#">ACCESS</a></li>
-      <li><a href="#">DOWNLOAD</a></li>
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#">SERVICE</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#">FLOOR</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#">INTERVIEW</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#">BLOG</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#">ACCESS</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#">DOWNLOAD</a>
+      </li>
     </ul>
   </div>
 </header>
