headerを作成中 lg以下でのボタン以外完成

--- a/src/components/organisms/header/header.html
+++ b/src/components/organisms/header/header.html
@@ -1,16 +1,27 @@
-<header class="navbar navbar-expand-sm navbar-light bg-light">
+<header class="navbar navbar-expand-sm navbar-light">
   <a class="navbar-brand" href="#">
     <img src="../../../img/header.png" alt="" />
   </a>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-bs-toggle="collapse"
+    data-bs-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse contents" id="navbarSupportedContent">
+    <ul class="navbar-nav me-auto mb-lg-0">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">HOME</a>
+        <a class="active" aria-current="page" href="">HOME</a>
       </li>
       <li class="nav-item dropdown">
         <a
-          class="nav-link dropdown-toggle active"
-          href="#"
+          class="dropdown-toggle active"
+          href=""
           id="navbarDropdown"
           role="button"
           data-bs-toggle="dropdown"
@@ -18,40 +29,38 @@
         >
           CONCEPT
         </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a href="#" class="dropdown-item">ブログアーカイブ</a></li>
-          <li><a href="#" class="dropdown-item">お知らせアーカイブ</a></li>
-          <li><a href="#" class="dropdown-item">イベントアーカイブ</a></li>
+        <ul aria-labelledby="navbarDropdown">
+          <li><a class="dropdown-item" href="">ブログアーカイブ</a></li>
+          <li><a class="dropdown-item" href="">お知らせアーカイブ</a></li>
+          <li><a class="dropdown-item" href="">イベントアーカイブ</a></li>
           <li>
-            <a href="#" class="dropdown-item">インタビューアーアーカイブ</a>
+            <a class="dropdown-item" href="">インタビュアーアーカイブ</a>
           </li>
-          <li><a href="#" class="dropdown-item">FAQアーカイブ</a></li>
-          <li>
-            <a href="#" class="dropdown-item">固定ページ(デフォルト)</a>
-          </li>
-          <li><a href="#" class="dropdown-item">CONCEPT</a></li>
-          <li><a href="#" class="dropdown-item">SERVICE</a></li>
-          <li><a href="#" class="dropdown-item">FLOOR</a></li>
-          <li><a href="#" class="dropdown-item">ACCESS</a></li>
+          <li><a class="dropdown-item" href="">FAQページ</a></li>
+          <li><a class="dropdown-item" href="">固定ページ(デフォルト)</a></li>
+          <li><a class="dropdown-item" href="">CONCEPT</a></li>
+          <li><a class="dropdown-item" href="">SERVICE</a></li>
+          <li><a class="dropdown-item" href="">FLOOR</a></li>
+          <li><a class="dropdown-item" href="">ACCESS</a></li>
         </ul>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">SERVICE</a>
+        <a class="active" aria-current="page" href="">SERVICE</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">FLOOR</a>
+        <a class="active" aria-current="page" href="">FLOOR</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">INTERVIEW</a>
+        <a class="active" aria-current="page" href="">INTERVIEW</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">BLOG</a>
+        <a class="active" aria-current="page" href="">BLOG</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">ACCESS</a>
+        <a class="active" aria-current="page" href="">ACCESS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">DOWNLOAD</a>
+        <a class="active" aria-current="page" href="">DOWNLOAD</a>
       </li>
     </ul>
   </div>
