--- a/src/components/organisms/header/header.html
+++ b/src/components/organisms/header/header.html
@@ -18,9 +18,9 @@
       <li class="nav-item">
         <a class="active" aria-current="page" href="">HOME</a>
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item">
         <a
-          class="dropdown-toggle active"
+          class="active"
           href=""
           id="navbarDropdown"
           role="button"
