headerを作成中 lg以下大体完成 残りはプラスマークに円を付ける

--- a/src/components/organisms/header/header.html
+++ b/src/components/organisms/header/header.html
@@ -2,18 +2,13 @@
   <a class="navbar-brand" href="#">
     <img src="../../../img/header.png" alt="" />
   </a>
-  <button
-    class="navbar-toggler"
-    type="button"
-    data-bs-toggle="collapse"
-    data-bs-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent"
-    aria-expanded="false"
-    aria-label="Toggle navigation"
-  >
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse contents" id="navbarSupportedContent">
+  <label for="check1">
+    <div class="rectangle"></div>
+    <div class="rectangle"></div>
+    <div class="rectangle"></div>
+  </label>
+  <input type="checkbox" id="check1" />
+  <div class="contents" id="navbarSupportedContent">
     <ul class="navbar-nav me-auto mb-lg-0">
       <li class="nav-item">
         <a class="active" aria-current="page" href="">HOME</a>
@@ -29,19 +24,23 @@
         >
           CONCEPT
         </a>
+        <label for="check2">
+          <div class="plus"></div>
+        </label>
+        <input type="checkbox" id="check2" />
         <ul aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="">ブログアーカイブ</a></li>
-          <li><a class="dropdown-item" href="">お知らせアーカイブ</a></li>
-          <li><a class="dropdown-item" href="">イベントアーカイブ</a></li>
+          <li><a href="">ブログアーカイブ</a></li>
+          <li><a href="">お知らせアーカイブ</a></li>
+          <li><a href="">イベントアーカイブ</a></li>
           <li>
-            <a class="dropdown-item" href="">インタビュアーアーカイブ</a>
+            <a href="">インタビュアーアーカイブ</a>
           </li>
-          <li><a class="dropdown-item" href="">FAQページ</a></li>
-          <li><a class="dropdown-item" href="">固定ページ(デフォルト)</a></li>
-          <li><a class="dropdown-item" href="">CONCEPT</a></li>
-          <li><a class="dropdown-item" href="">SERVICE</a></li>
-          <li><a class="dropdown-item" href="">FLOOR</a></li>
-          <li><a class="dropdown-item" href="">ACCESS</a></li>
+          <li><a href="">FAQページ</a></li>
+          <li><a href="">固定ページ(デフォルト)</a></li>
+          <li><a href="">CONCEPT</a></li>
+          <li><a href="">SERVICE</a></li>
+          <li><a href="">FLOOR</a></li>
+          <li><a href="">ACCESS</a></li>
         </ul>
       </li>
       <li class="nav-item">
