--- a/src/components/organisms/header/header.scss
+++ b/src/components/organisms/header/header.scss
@@ -2,25 +2,85 @@
 header.navbar {
   background-color: $black;
   display: block;
-  padding-bottom: 0px;
+  padding-top: 0px;
   a {
+    margin: 15px auto;
+    padding: 0px;
+    text-decoration: none;
     img {
       width: 120px;
     }
+  }
+  label {
+    width: 15px;
+    margin: 22.5px 16px 22.5px auto;
+    display: grid;
+    float: right;
+    gap: 3px;
+    .rectangle {
+      width: 15px;
+      height: 3px;
+      background-color: $white;
+    }
+  }
+  input + div.contents {
+    display: none;
+  }
+  input:checked + .contents {
+    display: block;
+  }
+  #check1 {
+    display: none;
   }
   div.contents {
     ul.navbar-nav {
       display: block;
       margin-bottom: 0px;
       li {
-        margin: 15px 0px;
+        margin: 30px 0px;
         a {
           color: $white;
           font-size: 14px;
           line-height: 20px;
         }
       }
+      li:first-child {
+        margin-top: 19.72px;
+      }
       li:nth-child(2) {
+        input + ul {
+          display: none;
+        }
+        input:checked + ul {
+          display: block;
+        }
+        #check2 {
+          display: none;
+        }
+        .plus {
+          display: inline-flex;
+          vertical-align: middle;
+          color: $white;
+          line-height: 1;
+          width: 1em;
+          height: 0.1em;
+          background: currentColor;
+          border-radius: 0.1em;
+          position: relative;
+          margin-left: auto;
+          top: -12px;
+        }
+        .plus::before {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background: inherit;
+          border-radius: inherit;
+          transform: rotate(90deg);
+        }
         ul {
           list-style: none;
           margin-left: 12px;
@@ -30,7 +90,13 @@ header.navbar {
               padding: 0px;
             }
           }
+          &:hover {
+            background-color: $black;
+          }
         }
+      }
+      li:last-child {
+        margin-bottom: 7px;
       }
     }
   }
