headerを作成中 xl以上大体完成 残りはhover時の挙動

--- a/src/components/organisms/header/header.html
+++ b/src/components/organisms/header/header.html
@@ -7,7 +7,7 @@
     <div class="rectangle"></div>
     <div class="rectangle"></div>
   </label>
-  <input type="checkbox" id="check1" />
+  <input type="checkbox" id="check1" checked />
   <div class="contents" id="navbarSupportedContent">
     <ul class="navbar-nav me-auto mb-lg-0">
       <li class="nav-item">
