headerを作成中 lg以下でのプラスボタン実装完了

--- a/src/components/organisms/header/header.html
+++ b/src/components/organisms/header/header.html
@@ -24,10 +24,11 @@
         >
           CONCEPT
         </a>
+        <input type="checkbox" id="check2" />
         <label for="check2">
           <div class="plus"></div>
+          <div class="circle"></div>
         </label>
-        <input type="checkbox" id="check2" />
         <ul aria-labelledby="navbarDropdown">
           <li><a href="">ブログアーカイブ</a></li>
           <li><a href="">お知らせアーカイブ</a></li>
