headerを作成中 xl以上でのconceptの処理完了

--- a/src/components/organisms/header/header.html
+++ b/src/components/organisms/header/header.html
@@ -14,16 +14,18 @@
         <a class="active" aria-current="page" href="">HOME</a>
       </li>
       <li class="nav-item">
-        <a
-          class="active"
-          href=""
-          id="navbarDropdown"
-          role="button"
-          data-bs-toggle="dropdown"
-          aria-expanded="false"
-        >
-          CONCEPT
-        </a>
+        <input type="checkbox" id="check3" />
+        <label for="check3" id="check3L">
+          <a
+            class="active"
+            id="navbarDropdown"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            CONCEPT
+          </a>
+        </label>
         <input type="checkbox" id="check2" />
         <label for="check2">
           <div class="plus"></div>
