headerを作成 不要部分を削除

--- a/src/components/organisms/header/header.html
+++ b/src/components/organisms/header/header.html
@@ -11,7 +11,7 @@
   <div class="contents" id="navbarSupportedContent">
     <ul class="navbar-nav me-auto mb-lg-0">
       <li class="nav-item">
-        <a class="active" aria-current="page" href="">HOME</a>
+        <a class="active" aria-current="page">HOME</a>
       </li>
       <li class="nav-item">
         <input type="checkbox" id="check3" />
@@ -32,37 +32,37 @@
           <div class="circle"></div>
         </label>
         <ul aria-labelledby="navbarDropdown">
-          <li><a href="">ブログアーカイブ</a></li>
-          <li><a href="">お知らせアーカイブ</a></li>
-          <li><a href="">イベントアーカイブ</a></li>
+          <li><a>ブログアーカイブ</a></li>
+          <li><a>お知らせアーカイブ</a></li>
+          <li><a>イベントアーカイブ</a></li>
           <li>
-            <a href="">インタビュアーアーカイブ</a>
+            <a>インタビュアーアーカイブ</a>
           </li>
-          <li><a href="">FAQページ</a></li>
-          <li><a href="">固定ページ(デフォルト)</a></li>
-          <li><a href="">CONCEPT</a></li>
-          <li><a href="">SERVICE</a></li>
-          <li><a href="">FLOOR</a></li>
-          <li><a href="">ACCESS</a></li>
+          <li><a>FAQページ</a></li>
+          <li><a>固定ページ(デフォルト)</a></li>
+          <li><a>CONCEPT</a></li>
+          <li><a>SERVICE</a></li>
+          <li><a>FLOOR</a></li>
+          <li><a>ACCESS</a></li>
         </ul>
       </li>
       <li class="nav-item">
-        <a class="active" aria-current="page" href="">SERVICE</a>
+        <a class="active" aria-current="page">SERVICE</a>
       </li>
       <li class="nav-item">
-        <a class="active" aria-current="page" href="">FLOOR</a>
+        <a class="active" aria-current="page">FLOOR</a>
       </li>
       <li class="nav-item">
-        <a class="active" aria-current="page" href="">INTERVIEW</a>
+        <a class="active" aria-current="page">INTERVIEW</a>
       </li>
       <li class="nav-item">
-        <a class="active" aria-current="page" href="">BLOG</a>
+        <a class="active" aria-current="page">BLOG</a>
       </li>
       <li class="nav-item">
-        <a class="active" aria-current="page" href="">ACCESS</a>
+        <a class="active" aria-current="page">ACCESS</a>
       </li>
       <li class="nav-item">
-        <a class="active" aria-current="page" href="">DOWNLOAD</a>
+        <a class="active" aria-current="page">DOWNLOAD</a>
       </li>
     </ul>
   </div>
