--- a/src/components/organisms/header/header.scss
+++ b/src/components/organisms/header/header.scss
@@ -48,6 +48,15 @@ header.navbar {
         margin-top: 19.72px;
       }
       li:nth-child(2) {
+        #check3 {
+          display: none;
+        }
+        label#check3L {
+          width: fit-content;
+          margin: auto 0px;
+          display: block;
+          float: none;
+        }
         input ~ ul {
           display: none;
         }
@@ -57,6 +66,7 @@ header.navbar {
         #check2 {
           display: none;
         }
+
         .plus {
           display: inline-flex;
           vertical-align: middle;
@@ -68,7 +78,7 @@ header.navbar {
           border-radius: 0.1em;
           position: relative;
           margin-left: auto;
-          top: -12px;
+          top: -35px;
         }
         .plus::before {
           content: "";
@@ -119,8 +129,7 @@ header.navbar {
     background-color: $black_50;
     display: flex;
     padding: 0px;
-    padding-right: 25px;
-    height: 90px;
+    padding-right: 30px;
     width: 1200px;
     a {
       margin-left: 30px;
@@ -144,11 +153,10 @@ header.navbar {
     div.contents {
       ul.navbar-nav {
         display: flex;
-        margin-left: 257px;
+        margin-left: 237px;
         height: 90px;
         li {
           margin: 35px 20px;
-          justify-items: center;
           a {
             margin: 0px;
           }
