--- a/src/components/organisms/header/header.scss
+++ b/src/components/organisms/header/header.scss
@@ -3,7 +3,7 @@ header.navbar {
   background-color: $black;
   display: block;
   a {
-    margin: 15px auto;
+    margin: 11.72px auto;
     padding: 0px;
     text-decoration: none;
     img {
@@ -120,7 +120,7 @@ header.navbar {
     padding-right: 30px;
     width: 1200px;
     a {
-      margin-left: 30px;
+      margin: 33px;
       img {
         width: 140px;
         height: 24px;
