--- a/src/components/organisms/header/header.scss
+++ b/src/components/organisms/header/header.scss
@@ -121,7 +121,7 @@ header.navbar {
     display: flex;
     padding: 0px;
     padding-right: 30px;
-    width: 1200px;
+    width: 100%;
     a {
       margin: 33px;
       img {
